# inversearena-frontend

./: .gitignore  README.md  package-lock.json  package.json
contract/arena/: Cargo.toml  abi_snapshot.json
contract/arena/proptest-regressions/: test.txt
contract/arena/src/: abi_guard.rs  bounds.rs  integration_tests.rs  invariants.rs  lib.rs  test.rs
contract/arena/test_snapshots/test/: basic_init_and_round_cycle.1.json  get_arena_state_is_pure_read.1.json  get_arena_state_reflects_round_number.1.json  get_arena_state_reflects_survivor_count.1.json  get_full_state_returns_combined_arena_and_user_state.1.json  join_boundary_participants_n_minus_1_n_n_plus_1.1.json  new_round_can_start_after_timeout.1.json  new_round_starts_after_timeout_with_fresh_state.1.json  partial_submissions_preserved_after_timeout.1.json  player_choice_accessible_after_timeout.1.json  prop_deadline_equals_start_plus_speed.1.json  prop_deadline_equals_start_plus_speed.10.json  prop_deadline_equals_start_plus_speed.100.json  prop_deadline_equals_start_plus_speed.101.json  prop_deadline_equals_start_plus_speed.102.json  prop_deadline_equals_start_plus_speed.103.json  prop_deadline_equals_start_plus_speed.104.json  prop_deadline_equals_start_plus_speed.105.json  prop_deadline_equals_start_plus_speed.106.json  prop_deadline_equals_start_plus_speed.107.json  prop_deadline_equals_start_plus_speed.108.json  prop_deadline_equals_start_plus_speed.109.json  prop_deadline_equals_start_plus_speed.11.json  prop_deadline_equals_start_plus_speed.110.json  prop_deadline_equals_start_plus_speed.111.json  (+1929 more)
(+211 files in other folders)
